# rust-experiments-2026

./: README.md
dictation/: CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
dictation/docs/: architecture-overview.md
dictation/src/: main.ts
dictation/src-tauri/: Cargo.toml  tauri.conf.json
dictation/src-tauri/capabilities/: default.json
dictation/src-tauri/src/: commands.rs  error.rs  events.rs  lib.rs  main.rs  pipeline.rs  state.rs
dictation/src-tauri/src/audio/: capture.rs  resample.rs
dictation/src-tauri/src/config/: mod.rs  settings.rs
dictation/src-tauri/src/hotkey/: manager.rs  mod.rs
dictation/src-tauri/src/injection/: keyboard.rs
dictation/src-tauri/src/stt/: cloud.rs  local.rs  mod.rs
disk-usage-clone/: CLAUDE.md  Cargo.toml
disk-usage-clone/adr/: 001-multi-threading-strategy.md  002-binary-with-library-structure.md  003-cli-framework-selection.md  004-module-organization.md  005-error-handling-strategy.md  006-output-colorization-strategy.md  README.md
disk-usage-clone/src/: cli.rs  entry.rs  error.rs  formatter.rs  lib.rs  main.rs  output.rs  traversal.rs
disk-usage-clone/tests/: integration.rs
less-clone/: CLAUDE.md  Cargo.toml  README.md
less-clone/adr/: 001-terminal-abstraction-strategy.md  002-binary-with-library-structure.md  003-cli-framework-selection.md  004-module-organization.md  005-error-handling-strategy.md  006-text-buffer-design.md  README.md
less-clone/src/: buffer.rs  cli.rs  error.rs  input.rs  lib.rs  main.rs  pager.rs  screen.rs  search.rs  status.rs
(+13 files in other folders)
