[package]
name = "dictation"
version = "0.1.0"
edition = "2024"
description = "Cross-platform dictation tool"

[lib]
name = "dictation_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
rubato = "0.16"
whisper-rs = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart"] }
enigo = "0.5"
hound = "3.5"
